k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pokertool
  labels:
    name: pokertool
    environment: production
